--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ html{
 }
 
 .max-width{
-	max-width: 1300px;
-	padding: 0 80px;
+	max-width: 1200px;
+	padding: 0 100px;
 	margin: auto;
 }
 /*navbar inicio       */
@@ -23,10 +23,17 @@ html{
 	font-family: 'Ubuntu', sans-serif;
 	transition: all 0.3s ease;
 }
+
+.navbar .max-width{
+	padding: 0 45px;
+}
+
+/*MENU SUPERIOR COR*/
 .navbar.sticky{
-	background: lightgreen;
+	background: #93b544;
 	padding: 15px 0;
 }
+
 .navbar .max-width{
 	display: flex;
 	align-items: center;
@@ -38,7 +45,7 @@ html{
 	font-weight: 500;
 } 
 .navbar .logo a span{
-	color: lightgreen;
+	color: #93b544;
 	transition: all 0.3s ease;
 }
 .navbar.sticky .logo a span{
@@ -48,19 +55,23 @@ html{
 	list-style: none;
 	display: inline-block;
 }
+/*Menu superior*/
 .navbar .menu li a{
 	color: black;
-	font-size: 18px;
+	font-size: 19px;
 	font-weight: 500;
 	margin-left: 25px;
 	transition: color 0.3s ease;
 }
+/*Cor ao passar mouse em cima dos elementos da barra superior*/
 .navbar .menu li a:hover{
-	color: lightgreen;
+	transition: color 0.3s ease;
+	color: gray;
 }
 .navbar.sticky .menu li a:hover{
 	color: white;
 }
+
 /*--home--inicio*/
 .home{
 	display: flex;
@@ -75,10 +86,6 @@ html{
 	font-family: 'Ubuntu', sans-serif;
 }
 
-.centro{
-
-}
-
 .home .max-width{
 	margin: auto 0 auto 40px;
 }
@@ -87,6 +94,7 @@ html{
 	color: black;
 }
 .home .home-content .text-2{
+	color: #93b544;
 	font-size: 75px;
 	font-weight: 500;
 	margin-left: 3px;
@@ -96,38 +104,64 @@ html{
 	margin: 5px 0;
 }
 .home .home-content .text-3 span{
-	color: lightgreen;
+	color: #93b544;
 	font-weight: 500;
 }
+
+.home .home-content img{
+	justify-content: center;
+}
+
+/*LOGOS*/
 .home .home-content .icons a{
+	width: 40px;
+	color: black;
 	background: none;
 	border: none;
 	font-size: 35px;
 	padding-left: 0;
 }
+.home .home-content .icons a:hover{
+	background: none;
+	color: #93b544;
+	transform: scale(1.25);
+}
 
+/*BOTÃO*/
 .home .home-content a{
 	display: inline-block;
-	background: lightgreen;
-	color: white;
+	background: #93b544;
+	color: black;
 	font-size: 25px;
 	padding: 12px 36px;
 	margin-top: 20px;
 	border-radius: 6px;
-	border: 2px solid lightgreen;
+	border: 2px solid #93b544;
+	transition: all 0.3s ease;
 }
+/*Botão ao passar mouse em cima*/
 .home .home-content a:hover{
-	color: lightgreen;
-	background: none;
+	transform: scale(1.10);
+	color: black;
+	background: #b0d041;
+	transition: all 0.3s ease;
 }
 /*--Menu Mobile--*/
-.menu-btn{
-	color: white;
+.menu-btn{  		/*3 listras*/
+	color: black;
 	font-size: 26px;
 	cursor: pointer;
 	display: none;
 }
+.scroll-up-btn:hover{
+	transition: all 0.3s ease;
+	color: #93b544;
+	border: 1px solid white;
+	background: black;
+
+}
 .scroll-up-btn{
+	border: 1px solid black;
 	position: fixed;
 	width: 42px;
 	height: 45;
@@ -136,7 +170,7 @@ html{
 	text-align: center;
 	line-height: 50px;
 	color: white;
-	background: lightgreen;
+	background: #93b544;
 	border-radius: 6px;
 	font-size: 30px;
 	z-index: 9999;
@@ -153,8 +187,9 @@ html{
 
 /*--Todos os codigos similares--*/
 section{
-	padding: 100px 0;
+	padding: 150px 0;
 }
+
 section .title{
 	position: relative;
 	text-align: center;
@@ -189,53 +224,54 @@ section .title::before{
 }
 
 /*--Sessao sobre--*/
-
 .about .title::after{
 	content: "";
 }
-.about .about-content .left{
-	width: 45%;
-}
-.about .about-content .right{
-	width: 55%;
-}
-.about .about-content .right .text{
-	font-size: 25px;
+
+.about .about-content .text-1{
+	letter-spacing: 1px;
+	font-size: 17px;
 	font-weight: 500;
 	margin-bottom: 10px;
 }
-.about .about-content .right .text span{
-	color: lightgreen;
+.about .about-content .text-1 span{
+	color: #93b544;
 }
-.about .about-content .right p{
-	text-align: justify;
-}
-.about .about-content .right a{
-	display: inline-block;
-	background: lightgreen;
-	color: white;
-	font-size: 20px;
-	font-weight: 500;
-	padding: 10px 30px;
-	margin-top: 20px;
-	border-radius: 6px;
-	border: 2px solid lightgreen;
+
+.about .about-content .card{
+	width: calc(100%%);				/*TAMANHO DOS QUADRADOS DAS FUNCIONALIDADES*/
+	padding: 10px 5px;
 	transition: all 0.3s ease;
+	padding-top: 25px;
 }
-.about .about-content .right a:hover{
-	color: lightgreen;
-	background: none;
+
+.about .about-content .card .box img{
+	width: 130px;
+	height: 130px;
+	transition: all 0.3s ease;
+	background: white;
+	text-align: center;
+	border-radius: 10px;
+	border: 2px solid black;
+	padding-right: 5px;
+	padding: 5px 10px;
 }
-.about .about-content .left img{
-	width: 400px;
-	height: 400px;
-	object-fit: cover;
-	border-radius: 6px;
+
+
+.about .about-content .card .box img:hover{
+	transform: scale(1.05);
+	color: #93b544;
+	background: white;
 }
 
 /*--sessao servicos--*/
-.services, .teams{
-	background: black;				/*Cor de fundo das sessoes pretas*/
+.teams{
+	background: black;
+	color: white;
+}
+
+.services {
+	background: #93b544;				/*Cor de fundo das sessoes pretas*/
 	color: white;
 }
 .services .title::before,
@@ -246,136 +282,96 @@ section .title::before{
 .teams .title::after{
 	background: none;
 }
+
 .services .serv-content .card{
-	width: calc(33% - 115px);				/*TAMANHO DOS QUADRADOS DAS FUNCIONALIDADES*/
-	background: lightgreen;
-	text-align: center;
-	border-radius: 6px;
-	padding: 20px 25px;
-	cursor: pointer;
+	width: calc(33% - 100px);				/*TAMANHO DOS QUADRADOS DAS FUNCIONALIDADES*/
+	padding: 10px 5px;
 	transition: all 0.3s ease;
-	border: 2px solid lightgreen;
 }
 .services .serv-content .card:hover{ /*COR DE FUNDO DAS FUNCIONALIDADES AO PASSAR O MOUSE*/
-	color: lightgreen;
-	background: white;
+
 }
-.services .serv-content .card .box{
+.services .serv-content .card .box{				/*FUNCIONALIDADES*/
 	transition: all 0.3s ease;
+	background: white;
+	text-align: center;
+	border-radius: 10px;
+	border: 2px solid black;
+	padding-right: 5px;
+	padding: 5px 10px;
 }
 .services .serv-content .card:hover .box{
 	transform: scale(1.05);
+	color: #93b544;
+	background: white;
 }
 .services .serv-content .card img{
 	font-size: 70px;
 	color: white;
 }
 .services .serv-content .card:hover img{
-	color: lightgreen;
+	color: #93b544;
 }
 .services .serv-content .card .text{
 	font-size: 25px;
-	font-weight: 500;
-	margin: 10px 0 7px 0;
+	font-weight: bold
+	margin: 10px 7px 7px 0;
 	color: black;
 }
 
-/*--Sessao conhecimento Skills--*/
-.skills .title:after{
-	content: "";
-}
-.skills .skills-content .column{
-	width: calc(50% - 30px);
-}
-.skills .skills-content .left .text{
-	font-size: 25px;
-	font-weight: 500;
-	margin-bottom: 10px;
-}
-.skills .skills-content .left p{
-	text-align: justify;
-	padding: 5px;
-}
-.skills .skills-content .left ,
-.text-1{
-	display: inline-block;
-	color: black;
-	font-size: 18px;
-	font-weight: 500;
-	padding: 8px 16px;
-	margin-top: 20px;
-	border-radius: 6px;
-	transition: all 0.3s ease;
-}
-.skills .skills-content .left a:hover{
-	color: lightgreen;
-	background: none;
-}
 
-.skills .skills-content .right .bars{
-	margin-bottom: 15px;
-}
-.skills .skills-content .right .info{
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-}
-.skills .skills-content .right span{
-	font-weight: 500;
-	font-size: 18px;
-}
-.skills .skills-content .right .line{
-	width: 100%;
-	height: 5px;
-	background: grey;
-	position: relative;
-}
-.skills .skills-content .right .line::before{
-	content: "";
-	position: absolute;
-	height: 100%;
-	top: 0;
-	left: 0;
-	background: lightgreen;
-}
-.skills .skills-content .right .html::before{
-	width: 90%;
-}
-.skills .skills-content .right .css::before{
-	width: 60%;
-}
-.skills .skills-content .right .python::before{
-	width: 65%;
-}
-.skills .skills-content .right .c::before{
-	width: 50%;
-}
-
-/*--Sessao Equipe/Projetos--*/
+/*EQUIPE*/
 .teams .title::after{
 	content: "";
 }
+/*Botao para ver todos os antigos membros*/
+.teams .verMais{
+	padding-top: 25px;
+	text-align: center;
+	display: block;
+}
+
+
+.teams .verMais a{
+	background: #93b544;
+	color: black;
+	font-size: 25px;
+	padding: 12px 36px;
+	margin-top: 20px;
+	border-radius: 6px;
+	border: 2px solid #93b544;
+	transition: all 0.3s ease;
+ }
+.teams .verMais a:hover{
+	color: black;
+	background: #b0d041;
+	transition: all 0.3s ease;
+}
+
 .teams .carousel .card{
-	background: lightgreen;
+	color: black;
+	background: white;
 	border-radius: 6px;
 	padding: 25px 35px;
 	text-align: center;
 	transition: all 0.3s ease;
-	border: 2px solid lightgreen;
+	border: 2px solid white;
 }
 .teams .carousel .card:hover{		/*Efeito de mudar de cor para preto do carrossel*/
-	background: none;
+	background: white;
+
 }
 .teams .carousel .card img{		/*Formatação das imagens do carrossel*/
-	width: 150px;
-	height: 150px;
+	width: 170px;
+	height: 170px;
 	object-fit: cover;
 	border-radius: 20%;
 	border: 5px solid black;
 	transition: all 0.3s ease;
 }
 .teams .carousel .card:hover img{ /*Efeito de quando passa o mouse em cima da imagem*/
-	border-color: lightgreen;
+	border-color: black;
+
 }
 .teams .carousel .card .box{
 	display: flex;
@@ -401,7 +397,7 @@ section .title::before{
 	height: 14px;
 	outline: none!important;
 	border-radius: 50%;
-	border:  2px solid lightgreen!important;
+	border:  2px solid #93b544!important;
 	transition: all 0.3s ease;
 }
 .owl-dot.active{
@@ -410,7 +406,7 @@ section .title::before{
 }
 .owl-dot.active,
 .owl-dot:hover{
-	background: lightgreen!important;
+	background: #93b544!important;
 }
 
 /*--Sessao contato--*/
@@ -447,7 +443,7 @@ section .title::before{
 }
 .contact .contact-content .row ion-icon{
 	font-size: 25px;
-	color: lightgreen;
+	color: #93b544;
 }
 .contact .right form .fields{
 	display: flex;
@@ -490,8 +486,8 @@ section .title::before{
 .contact .right form .button button{
 	width: 100%;
 	height: 100%;
-	border: 2px solid lightgreen;
-	background: lightgreen;
+	border: 2px solid #93b544;
+	background: #93b544;
 	color: white;
 	font-size: 20px;
 	font-weight: 500;
@@ -499,8 +495,8 @@ section .title::before{
 	cursor: pointer;
 }
 .contact .right form .button button:hover{
-	color: lightgreen;
-	background: none;
+	color: white;
+	background: #b0d041;
 }
 /*--Footer--*/
 footer{
@@ -510,7 +506,7 @@ footer{
 	text-align: center;
 }
 footer span a{
-	color: skyblue;
+	color: white;
 	text-decoration: none;
 }
 footer span a:hover{
@@ -545,13 +541,13 @@ footer span a:hover{
 		display: block;
 		z-index: 999;
 	}
-	.navbar .menu{
+	.navbar .menu{/*Cor do menu mobile*/
 		position: fixed;
 		width: 100%;
 		height: 100vh;
 		left: -100%;
 		top: 0;
-		background: black;
+		background: #93b544;
 		padding-top: 80px;
 		text-align: center;
 		transition: all 0.3s ease;
@@ -577,21 +573,23 @@ footer span a:hover{
 		font-size: 23px;
 		padding: 10px 30px;
 	}
-	.about .about-content .column{
-		width: 50%;
+
+
+	.about .about-content{
+		width: 100%;
 	}
-	.about .about-content .left{
+	.about .about-content{
 		display: flex;
 		justify-content: center;
 		margin: 0 auto 60px;
 	}
-	.about .about-content .right{
-		flex: 100%;
-	}
+
 	.services .serv-content .card{
 		width: calc(50% - 10px);
 		margin-bottom: 20px;
+		padding: 10px 10px;
 	}
+
 	.skills .skills-content .column,
 	.contact .contact-content .column{
 		width: 100%;
@@ -612,7 +610,7 @@ footer span a:hover{
 		font-size: 20px;
 	}
 	.services .serv-content .card{
-	width: 100%;
+	width: 45%;
 	}
 }
 @media (max-width: 500px){
@@ -622,4 +620,80 @@ footer span a:hover{
 	.home .home-content .text-3{
 		font-size: 32px;
 	}
+	.services .serv-content .card{
+		width: 50%;
+	}
+	.services .serv-content .card .text{
+		font-size: 20px;
+	}
+}
+
+
+.about .about-content .card2{
+	width: calc(100%%);				/*TAMANHO DOS QUADRADOS DAS FUNCIONALIDADES*/
+	padding: 10px 5px;
+	transition: all 0.3s ease;
+	padding-top: 25px;
+	display: block;
+	text-align: center;
+	margin: 0px auto;
+
+}
+
+.about .about-content .card2 .box img{
+	display: block;
+	width: 130px;
+	height: 130px;
+	transition: all 0.3s ease;
+	background: white;
+	text-align: center;
+	border-radius: 10px;
+	border: 2px solid black;
+	padding-right: 5px;
+	padding: 5px 10px;
+}
+
+
+.about .about-content .card2 .box img:hover{
+	transform: scale(1.05);
+	color: #93b544;
+	background: white;
+}
+
+.text-menor{
+	font-size: 22px;
+	font-weight: bold
+	margin: 10px 7px 7px 0;
+	color: black;
+}
+
+.teams2{
+	background: white;
+	color: black;
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: space-between;
+}
+
+
+
+.teams2 .card{
+	display: inline-block;
+	color: black;
+	background: white;
+	border-radius: 6px;
+	padding: 10px 15px;
+	text-align: center;
+	transition: all 0.3s ease;
+	border: 2px solid white;
+}
+
+.teams2 .card img{		/*Formatação das imagens do carrossel*/
+	width: 200px;
+	height: 200px;
+	object-fit: cover;
+	border-radius: 20%;
+	border: 5px solid black;
+	transition: all 0.3s ease;
 }
